feat: add CorsFilter & config flow for filters in web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>filters.CorsFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>JwtAuthenticationFilter</filter-name>
+        <filter-class>filters.JwtAuthenticationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>JwtAuthenticationFilter</filter-name>
+        <url-pattern>/users/*</url-pattern>
+        <url-pattern>/cart/*</url-pattern>
+        <url-pattern>/orders/*</url-pattern>
+        <url-pattern>/payments/checkout</url-pattern>
+    </filter-mapping>
 </web-app>
