--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,10 @@
 hs_err_pid*
 replay_pid*
 
-# IDEA files
+# IDEs files
 .idea/
 *.iml
+nb-configuration.xml
 
 # Eclipse files
 .settings/
@@ -39,3 +40,5 @@ out/
 
 # Personal
 TODO.md
+
+.smarttomcat/
